# duckdisk

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml
docs/: index.html  robots.txt  sitemap.xml
src/: App.tsx  d3chart.ts  index.d.ts  pruneData.ts  scanResult.worker.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  scan.rs  window_style.rs
src/components/: DiskDetail.tsx  DiskItem.tsx  DiskList.tsx  FileLine.tsx  ParentFolder.tsx  TitleBar.tsx
